syntax = "proto3";

package user;

// The SignInSignUpRequest message is used for the SignIn and SignUp operations.
message SignInSignUpRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string message = 1;
  string token = 2;
}

message EmptyRequest {}

message EmptyResponse {
  string message = 1;
}

message PasswordRequest {
  string token = 1;
  string password = 2;
}

message EmailRequest {
  string token = 1;
  string email = 2;
}

message InviteUserRequest {
  string email = 1;
  bool admin = 2;
}

message ActivateUserRequest {
  string token = 1;
}

message ChangeRightsRequest {
  string email = 1;
  bool admin = 2;
}

message GetUsersRequest {
}

message GetUsersResponse {
  repeated string users = 1;
}

// The UserService defines the methods that our service exposes
service User {
  rpc SignIn(SignInSignUpRequest) returns (UserResponse);
  rpc SignUp(SignInSignUpRequest) returns (UserResponse);
  rpc ResetPassword(PasswordRequest) returns (UserResponse);
  rpc ChangeEmail(EmailRequest) returns (UserResponse);
  rpc InviteUser(InviteUserRequest) returns (EmptyResponse);
  rpc ActivateUser(ActivateUserRequest) returns (EmptyResponse);
  rpc ChangeRights(ChangeRightsRequest) returns (EmptyResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}
